==> wirepas/wm-sdk/mcu/efr/efr32/hal/gpio.c <==
#include "gpio.h"
#include "mcu.h"
#include "board.h"
#include "api.h"
#include "em_cmu.h"
#include "em_gpio.h"
#define IT_FREE (0x1F) // must be greater than GPIO_EXTINTNO_MAX
#define BOARD_GPIO_NUMBER (sizeof(m_id_to_pin_map) / sizeof(m_id_to_pin_map[0]))

gpio_res_e Gpio_inputRead(gpio_id_t id, gpio_level_e *level)
{
    gpio_port_t port;
    gpio_pin_t pin;
    bool  read_val;

    if (!m_initialized)
    {
        return GPIO_RES_UNINITIALIZED;
    }
    if (id >= BOARD_GPIO_NUMBER || level == NULL)
    {
        return GPIO_RES_INVALID_PARAM;
    }
    if (m_id_to_cfg_map[id].direction != DIR_INPUT)
    {
        return GPIO_RES_INVALID_DIRECTION;
    }

    Gpio_getPin(id, &port, &pin);
    read_val = (GPIO_PinInGet(port, pin) != 0);
    *level = read_val ? GPIO_LEVEL_HIGH : GPIO_LEVEL_LOW;

    return GPIO_RES_OK;
}

gpio_res_e Gpio_outputSetCfg(gpio_id_t id, const gpio_out_cfg_t *out_cfg)
{
    GPIO_Mode_TypeDef mode;
    gpio_port_t port;
    gpio_pin_t pin;

    if (!m_initialized)
    {
        return GPIO_RES_UNINITIALIZED;
    }
    if (id >= BOARD_GPIO_NUMBER || out_cfg == NULL)
    {
        return GPIO_RES_INVALID_PARAM;
    }

    /*
     * convert board independant operating mode enum,
     * to board specific operating mode enum
     */
    switch (out_cfg->out_mode_cfg)
    {
        case GPIO_OUT_MODE_PUSH_PULL:
            mode = gpioModePushPull;
            break;
        case GPIO_OUT_MODE_OPEN_DRAIN:
            mode = gpioModeWiredAndFilter;
            break;
        case GPIO_OUT_MODE_OPEN_DRAIN_WITH_PULL_UP:
            mode = gpioModeWiredAndPullUpFilter;
            break;
        default:
            return GPIO_RES_INVALID_PARAM;
    }

    Sys_enterCriticalSection();

    Gpio_getPin(id, &port, &pin);
    GPIO_PinModeSet(port, pin, mode, (out_cfg->level_default != GPIO_LEVEL_LOW));
    /* Store direction */
    m_id_to_cfg_map[id].direction = DIR_OUTPUT;

    Sys_exitCriticalSection();

    return GPIO_RES_OK;
}

gpio_res_e Gpio_outputWrite(gpio_id_t id, gpio_level_e level)
{
    gpio_port_t port;
    gpio_pin_t pin;

    if (!m_initialized)
    {
        return GPIO_RES_UNINITIALIZED;
    }
    if (id >= BOARD_GPIO_NUMBER)
    {
        return GPIO_RES_INVALID_PARAM;
    }
    if (m_id_to_cfg_map[id].direction != DIR_OUTPUT)
    {
        return GPIO_RES_INVALID_DIRECTION;
    }

    Gpio_getPin(id, &port, &pin);
    if (level == GPIO_LEVEL_HIGH)
    {
        GPIO_PinOutSet(port, pin);
    }
    else
    {
        GPIO_PinOutClear(port, pin);
    }

    return GPIO_RES_OK;
}

gpio_res_e Gpio_outputToggle(gpio_id_t id)
{
    gpio_port_t port;
    gpio_pin_t pin;

    if (!m_initialized)
    {
        return GPIO_RES_UNINITIALIZED;
    }
    if (id >= BOARD_GPIO_NUMBER)
    {
        return GPIO_RES_INVALID_PARAM;
    }
    if (m_id_to_cfg_map[id].direction != DIR_OUTPUT)
    {
        return GPIO_RES_INVALID_DIRECTION;
    }

    Gpio_getPin(id, &port, &pin);
    GPIO_PinOutToggle(port, pin);

    return GPIO_RES_OK;
}

static void input_set_cfg_mode(gpio_id_t id, const gpio_in_cfg_t *in_cfg)
{
    gpio_port_t port;
    gpio_pin_t pin;
    GPIO_Mode_TypeDef efr_mode;
    bool out;

    /*
     * convert board independant mode enum,
     * to board specific mode enum
     */
    switch (in_cfg->in_mode_cfg)
    {
        case GPIO_IN_DISABLED:
            efr_mode = gpioModeDisabled;
            /* set "out" to 0 to disable pull-up */
            out = false;
            break;
        case GPIO_IN_PULL_NONE:
            efr_mode = gpioModeInput;
            /* set "out" to 1 to enable filter */
            out = true;
            break;
        case GPIO_IN_PULL_DOWN:
            efr_mode = gpioModeInputPullFilter;
            /* "out" determines pull direction (0 -> pull-down)  */
            out = false;
            break;
        case GPIO_IN_PULL_UP:
            efr_mode = gpioModeInputPullFilter;
            /* "out" determines pull direction (1 -> pull-up)  */
            out = true;
            break;
    }
    Gpio_getPin(id, &port, &pin);
    GPIO_PinModeSet(port, pin, efr_mode, out);
}

static gpio_res_e input_set_cfg_irq(gpio_id_t id, const gpio_in_cfg_t *in_cfg)
{
    gpio_port_t port;
    gpio_pin_t pin;
    gpio_it_t it;
    gpio_res_e res;

    /* if no event on this GPIO, ... */
    if (in_cfg->event_cfg == GPIO_IN_EVENT_NONE)
    {
        /* ...then free/unalloc its interrupt number */
        free_it(id, &it);
    }
    /* else if any event on this GPIO, ... */
    else
    {
        /* ...then allocate an interrupt number to the GPIO */
        res = alloc_it(id, &it);
        if (res != GPIO_RES_OK)
        {
            return res;
        }
    }

    /* update the interrupt registers, if got a valid interrupt number  */
    if (it != IT_FREE)
    {
        Gpio_getPin(id, &port, &pin);
        GPIO_ExtIntConfig(port,
                          pin,
                          it,
                          IS_RISING_EDGE(in_cfg->event_cfg),
                          IS_FALLING_EDGE(in_cfg->event_cfg),
                          in_cfg->event_cfg != GPIO_IN_EVENT_NONE);
    }
    return GPIO_RES_OK;
}

static void input_init_irq(void)
{
    GPIO_IntDisable(_GPIO_IEN_MASK & 0x0000FFFF);
    lib_system->enableAppIrq(true, GPIO_EVEN_IRQn, APP_LIB_SYSTEM_IRQ_PRIO_LO, gpio_event_handle);
    lib_system->enableAppIrq(true, GPIO_ODD_IRQn, APP_LIB_SYSTEM_IRQ_PRIO_LO, gpio_event_handle);
    lib_system->clearPendingFastAppIrq(GPIO_EVEN_IRQn);
    lib_system->clearPendingFastAppIrq(GPIO_ODD_IRQn);
}

static void gpio_event_handle(void)
{
    gpio_id_t id;
    gpio_it_t it;
    bool it_raised;
    gpio_level_e level;
    gpio_in_event_cb_f event_cb;
    gpio_in_event_e event_cfg;
    gpio_in_event_e event;

    /* for each GPIO */
    for (id = 0; id < BOARD_GPIO_NUMBER; id++)
    {
        /* get the interrupt number of the GPIO */
        it = m_id_to_cfg_map[id].it;
        if (it == IT_FREE)
        {
            continue;
        }

        /* check if the GPIO interrupt flag is set */
        it_raised = (GPIO_IntGet() & (((uint32_t) 1) << it)) != 0;
        if (it_raised)
        {
            Gpio_inputRead(id, &level);
            /* get stored/internal config  */
            event_cb = m_id_to_event_cb_map[id];
            event_cfg = m_id_to_cfg_map[id].event_cfg;
            /*
             * Invoke user handler only if the pin level
             * matches its polarity configuration.
             */
            if (event_cb &&
               ((IS_RISING_EDGE(event_cfg) && IS_FALLING_EDGE(event_cfg)) ||
               (level == GPIO_LEVEL_HIGH && IS_RISING_EDGE(event_cfg)) ||
               (level == GPIO_LEVEL_LOW && IS_FALLING_EDGE(event_cfg))))
            {
                event = (level == GPIO_LEVEL_HIGH) ? GPIO_IN_EVENT_RISING_EDGE : GPIO_IN_EVENT_FALLING_EDGE;
                event_cb(id, event);
            }

            /* clear the GPIO interrupt flag */
            GPIO_IntClear((uint32_t) 1 << it);
        }
    }
}
